--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,6 +1,27 @@
-.footer{
-    font-family: $font_project;
-    background: $pr-color;
-    color: #fff;
-    text-align: center;
+.footer {
+  font-family: $font_project;
+  background: $pr-color;
+  color: #fff;
+  text-align: center;
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  ul {
+    list-style: none;
+    @extend%center-content;
+    margin: 1rem;
+    height: 65px;
+  }
+  .media-logo {
+    margin: 5px;
+    // padding: 5px;
+    height: 50px;
+    width: 50px;
+    transition: all linear 100ms;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+  p{
+     font-size: 1rem;
+  }
 }
