--- a/scss/_my-work.scss
+++ b/scss/_my-work.scss
@@ -4,7 +4,6 @@
   .container {
     background: #fff;
     text-align: center;
-    // border: 1px solid;
     padding: 2rem;
     height: 500px;
   }
@@ -18,8 +17,7 @@
 
   p {
     font-size: 1.3rem;
-    color: #fff;
+    color: $pr-color;
     margin: 2rem;
-    // line-height: 1.4rem;
   }
 }
