changin folder name and adding my work cards

--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -46,8 +46,8 @@
         margin-top: 0.6rem;
         margin-bottom: 0.6rem;
         background-color: $pr-color;
-        -webkit-mask: url(../assets/terminal.svg) no-repeat center;
-        mask: url(../assets/terminal.svg) no-repeat center;
+        -webkit-mask: url(../img/terminal.svg) no-repeat center;
+        mask: url(../img/terminal.svg) no-repeat center;
       }
       .icon-tools {
         height: 50px;
@@ -55,8 +55,8 @@
         margin-top: 0.6rem;
         margin-bottom: 0.6rem;
         background-color: $pr-color;
-        -webkit-mask: url(../assets/gear.svg) no-repeat center;
-        mask: url(../assets/gear.svg) no-repeat center;
+        -webkit-mask: url(../img/gear.svg) no-repeat center;
+        mask: url(../img/gear.svg) no-repeat center;
       }
       font-size: 1.3rem;
       color: $pr-color;
