--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,6 +1,6 @@
 .header {
   height: 85px;
-  background: #fff;
+  background: rgba($color: #fff, $alpha: 0.95);
   position: fixed;
   top: 0;
   width: 100%;
