--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -18,7 +18,7 @@
     width: 50px;
     transition: all linear 100ms;
     &:hover {
-      transform: scale(1.1);
+      transform: translateY(-5px);
     }
   }
   p{
