--- a/scss/_my-work.scss
+++ b/scss/_my-work.scss
@@ -6,6 +6,7 @@
     text-align: center;
     padding: 2rem;
     height: 500px;
+    // border: 1px solid;
   }
 
   h3 {
@@ -15,9 +16,48 @@
     margin: auto;
   }
 
-  p {
-    font-size: 1.3rem;
-    color: $pr-color;
-    margin: 2rem;
+  section {
+    display: flex;
+    @extend%center-content;
+    justify-content: space-around;
+    padding: 1rem;
+    height: 100%;
+    .card {
+      overflow: hidden;
+      height: 240px;
+      width: 350px;
+      border: 2px solid $pr-color;
+      border-radius: 1.5rem;
+      &:hover {
+        p {
+          background-color: $pr-color;
+          color: #fff;
+          transform: translateY(0);
+        }
+      }
+
+      p {
+        color: #fff;
+        transition: all linear 0.4s;
+        transform: translateY(250px);
+        @extend%center-content;
+        flex-direction: column;
+        font-size: 1.3rem;
+        height: 100%;
+        width: 100%;
+        a{
+          text-decoration: underline;
+          // font-size: 1.5rem;
+          color: #fff;
+          font-weight: bold;
+        }
+      }
+    }
+    .pokedex {
+      background-image: url(../img/pokedex.png);
+      background-size: cover;
+      background-position: -18px 0;
+      flex-direction: column;
+    }
   }
 }
