--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -5,7 +5,7 @@
   .container {
     text-align: center;
     padding: 2rem;
-    height: 500px;
+    height: 750px;
   }
 
   h3 {
@@ -15,8 +15,8 @@
     margin: auto;
   }
   .wrapper {
-    display: flex;
-    height: 400px;
+    @extend%center-content;
+    height: 600px;
     padding: 1rem;
 
     p {
@@ -35,6 +35,7 @@
       .sub-title1 {
         font-size: 1.7rem;
         font-weight: 600;
+        margin-top: 2rem;
       }
       .sub-title2 {
         font-size: 1.4rem;
@@ -65,6 +66,7 @@
       flex: 1 1 0;
       border: 1px solid #fff;
       padding: 1rem;
+      height: 450px;
     }
   }
 }
