--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -71,3 +71,18 @@
     }
   }
 }
+
+@media only screen and (max-width: 688px) {
+  .about-me {
+    .container {
+      height: 980px;
+    }
+    .wrapper {
+      margin-top: 4rem;
+      flex-direction: column;
+    }
+    h3 {
+      width: 100%;
+    }
+  }
+}
