--- a/scss/_my-work.scss
+++ b/scss/_my-work.scss
@@ -46,7 +46,7 @@
         font-size: 1.3rem;
         height: 100%;
         width: 100%;
-        a{
+        a {
           text-decoration: underline;
           // font-size: 1.5rem;
           color: #fff;
@@ -60,6 +60,20 @@
       background-position: -18px 0;
       flex-direction: column;
       order: -1;
+    }
+  }
+}
+
+@media only screen and (max-width: 688px) {
+  .my-work {
+    h3{
+      width: 100%;
+    }
+    .container{
+      height: 1000px;
+    }
+    section {
+      flex-direction: column;
     }
   }
 }
