--- a/scss/_about-me.scss
+++ b/scss/_about-me.scss
@@ -94,11 +94,13 @@
     //   width: 100%;
     // }
     .container{
-      height: 1400px;
+      height: 1250px;
+      padding-right: 0.3rem;
+      padding-left: 0.3rem;
     }
     p{
       margin-top: 22rem;
-      font-size: 1rem;
+      font-size: 0.8rem;
     }
     section {
       flex-direction: column;
