[UPDATE]  My Work section

--- a/src/styles/MyWork.scss
+++ b/src/styles/MyWork.scss
@@ -15,3 +15,9 @@
   background-size: cover;
   background-position: -58px 0;
 }
+
+.wordle {
+  background-image: url(@img/wordle_gusgluna.JPG);
+  background-size: cover;
+  background-position: -58px 0;
+}
